Closed
Bug 848733
Opened 12 years ago
Closed 12 years ago
IonMonkey: Don't eliminate callee phi when inlining natives
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla22
People
(Reporter: jandem, Assigned: jandem)
References
Details
(Keywords: regression)
Attachments
(2 files)
1.72 KB,
patch
|
bhackett1024
:
review+
bajaj
:
approval-mozilla-aurora+
bajaj
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
1.71 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
Noticed this while looking at some benchmarks. The following testcase throws a "TypeError: round is not a function" on m-c:
var a = [1];
function f(x) {
var round = Math.round;
for (var i=0; i<20; i++) {
a[0] = round(a[0]);
if (x > 500)
a[0] = "a";
}
}
for (var i=0; i<550; i++)
f(i);
Assignee | ||
Comment 1•12 years ago
|
||
Sets the Folded flag on the MIR instruction after inlining a native call.
Attachment #722180 -
Flags: review?(bhackett1024)
Assignee | ||
Updated•12 years ago
|
Blocks: 818869
status-firefox20:
--- → affected
status-firefox21:
--- → affected
status-firefox22:
--- → affected
Assignee | ||
Comment 2•12 years ago
|
||
Noticed this on a raytracer, so this breaks real-world code. Updating flags.
status-firefox19:
--- → unaffected
tracking-firefox20:
--- → ?
tracking-firefox21:
--- → ?
tracking-firefox22:
--- → ?
Updated•12 years ago
|
Attachment #722180 -
Flags: review?(bhackett1024) → review+
Assignee | ||
Comment 3•12 years ago
|
||
Comment 4•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Updated•12 years ago
|
Assignee | ||
Comment 5•12 years ago
|
||
Comment on attachment 722180 [details] [diff] [review]
Patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 818869
User impact if declined: Correctness issues, websites not working
Testing completed (on m-c, etc.): On m-c
Risk to taking this patch (and alternatives if risky): Very low
String or UUID changes made by this patch: None
Attachment #722180 -
Flags: approval-mozilla-beta?
Attachment #722180 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Keywords: regression
Comment 6•12 years ago
|
||
Comment on attachment 722180 [details] [diff] [review]
Patch
low risk uplift of a Fx20 regression which helps avoid broken websites.Approving for uplift
Attachment #722180 -
Flags: approval-mozilla-beta?
Attachment #722180 -
Flags: approval-mozilla-beta+
Attachment #722180 -
Flags: approval-mozilla-aurora?
Attachment #722180 -
Flags: approval-mozilla-aurora+
Updated•12 years ago
|
Comment 7•12 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/9cd73a76c112
This doesn't apply cleanly to beta. Please post a branch-specific patch.
Assignee | ||
Comment 8•12 years ago
|
||
Beta does not have callInfo.
Attachment #723398 -
Flags: review?(bhackett1024)
Comment 10•12 years ago
|
||
Comment on attachment 723398 [details] [diff] [review]
Patch for beta
Review of attachment 723398 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/jit-test/tests/ion/bug848733.js
@@ +7,5 @@
> + a[0] = "a";
> + }
> +}
> +for (var i=0; i<550; i++)
> + f(i);
I don't think the new test is needed on beta.
Attachment #723398 -
Flags: review?(bhackett1024) → review+
Comment 11•12 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•