Bug 848733 - Don't eliminate callee phi when inlining natives. r=bhackett